<resources>
    <string name="app_name">개발수업 링크트리</string>
    <string name="signin_signin">로그인</string>
    <string name="signin_id">아이디</string>
    <string name="signin_pw">비밀번호</string>
    <string name="id">ID</string>
    <string name="pw">PW</string>
    <string name="signup">회원가입 하기</string>
    <string name="name">이름</string>
    <string name="team">팀</string>
    <string name="mbti_hint">MBTI를 알려주세요</string>
</resources>