<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">
    <!-- [backgorund] @drawable에 만들어 둔 그라디언트 적용 -->

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/btn_back"
        android:tint="@color/mainColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/my_character"
        android:tint="@color/disabled_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel"
        android:layout_marginTop="90dp"/>

    <LinearLayout
        android:id="@+id/progress_act3"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/my_character"
            android:tint="@color/mainColor" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="?"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="프로필을 완성해주세요"
        android:textAlignment="center"
        android:textColor="@color/mainColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_corner_background_stroke"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="left"
                android:text="@string/id"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_id_act3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/empty_background"
                android:hint="@string/signin_id"
                android:inputType="text"

                android:padding="18dp"
                android:singleLine="true"
                android:textColorHint="@color/disabled_black"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@color/disabled_black" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="left"
                android:text="@string/pw"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_pw_act3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/empty_background"
                android:hint="@string/signin_pw"
                android:inputType="textPassword"
                android:padding="18dp"
                android:singleLine="true"
                android:textColorHint="@color/disabled_black"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_background_stroke"
        android:backgroundTint="@color/mainColor"
        android:padding="15dp"
        android:layout_marginTop="15dp"
        android:text="가입 완료하기"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>