<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/btn_back"
        android:tint="@color/mainColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_character"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel"
        app:srcCompat="@drawable/my_character" />

    <TextView
        android:id="@+id/home_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="my ID"
        android:textAlignment="center"
        android:textColor="#03C75B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_character" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner_background_stroke"
        android:gravity="start|left"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_id">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="left"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/home_name"
                android:text=""
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:background="@drawable/empty_background"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="left" />
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="#CCCCCC" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="left"
                android:text="@string/team"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/home_team"
                android:text=""
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:background="@drawable/empty_background"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="left" />
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="#CCCCCC" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="MBTI"
                android:textSize="18sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/home_mbti"
                android:text=""
                android:maxLength="4"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:textColor="#000000"
                android:hint="@string/mbti_hint"
                android:textColorHint="@color/disabled_black"
                android:background="@drawable/empty_background"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="left" />
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="#CCCCCC" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_link"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_corner_background_stroke"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/notion_app_logo"/>

        <TextView
            android:id="@+id/btn_link_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="창업 2조 노션"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_close_home"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_corner_background_stroke"
        android:backgroundTint="@color/disabled_black"
        android:clickable="true"
        android:gravity="center"
        android:padding="15dp"
        android:text="로그아웃"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_link" />

</androidx.constraintlayout.widget.ConstraintLayout>